# routeOptimizer

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
configs/: train.yaml
routeoptimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_demo.bat
src/api/: main.py
src/data/: generate_data.py
src/features/: engineering.py
src/optimization/: solver.py
src/ui/: app.py
tests/: conftest.py  test_api.py  test_features.py  test_model.py  test_placeholder.py  test_solver.py
