[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routeoptimizer"
version = "0.1.0"
description = "Dynamic delivery routing with ETA prediction and OR-Tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "routeOptimizer team" }]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "lightgbm==4.5.0",
    "ortools==9.10.4067",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "streamlit==1.38.0",
    "mlflow==2.16.2",
    "dvc==3.56.0",
    "hydra-core==1.3.2",
    "pyyaml==6.0.2",
    "osmnx==1.9.4",
    "geopandas==0.14.4",
    "folium==0.17.0",
    "joblib==1.4.2",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.6.5",
    "mypy==1.11.2",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
